--- a/src/styles/_settings.css
+++ b/src/styles/_settings.css
@@ -24,12 +24,13 @@
   --boxShadow: 0px 2px 2px rgba(0, 0, 0, 0.01), 0px 3px 3px rgba(0, 0, 0, 0.015),
     0px 8px 8px rgba(0, 0, 0, 0.02), 0px 24px 24px rgba(0, 0, 0, 0.03);
 
-  --fontFamilySystem: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Helvetica Neue', sans-serif;  
+  --fontFamilySystem: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Helvetica Neue',
+    sans-serif;
   --fontFamilySans: var(--fontFamilySystem);
   --fontFamilyMono: 'IBM Plex Mono', Monacao, monospace;
   --fontFamilySerif: 'EB Garamond', Georgia, serif;
 
-  --fontSizeSmallest: 0.8rem;
+  --fontSizeSmallest: 0.75rem;
   --fontSizeSmaller: 13px;
   --fontSizeSmall: 15px;
   --fontSizeDefault: 1rem;
