--- a/src/components/Figure.css
+++ b/src/components/Figure.css
@@ -18,9 +18,14 @@
     margin-top: 2rem;
   }
 
+  .Figure--large {
+    margin-left: -2.5rem;
+    margin-right: -2.5rem;
+  }
+
   .Figure--full {
-    margin-left: calc((100vw - var(--maxWidth) + var(--gutter) * 2) / -2);
-    margin-right: calc((100vw - var(--maxWidth) + var(--gutter) * 2) / -2);
+    margin-left: calc((100vw - var(--maxWidth)) / -2);
+    margin-right: calc((100vw - var(--maxWidth)) / -2);
     margin-top: var(--spaceMedium);
     min-width: 100%;
     width: 100vw;
@@ -29,12 +34,14 @@
   .Figure--full .Caption {
     margin-bottom: var(--spaceMedium);
   }
+}
 
+@media (--lg) {
   .Figure--large {
     margin-bottom: var(--spaceMedium);
     margin-bottom: 3rem;
-    margin-left: calc(-1 * var(--spaceLarge));
-    margin-right: calc(-1 * var(--spaceLarge));
+    margin-left: -8.125rem;
+    margin-right: -8.125rem;
     margin-top: var(--spaceMedium);
   }
 }
