--- a/src/components/ChaosGallery.css
+++ b/src/components/ChaosGallery.css
@@ -9,97 +9,29 @@
   width: 100%;
 }
 
-.ChaosImage {
-  --minDeviation: 0;
-  --maxDeviation: 10;
-
-  --smallImage: 180px;
-  --mediumImage: 225px;
-  --largeImage: 250px;
+.NewChaosImage {
+  --size: 500px;
 
   cursor: grab;
-  display: block;
+  height: var(--size);
+  left: 50%;
   opacity: 0;
   pointer-events: none;
   position: fixed;
-  transition: opacity var(--transitionFast);
+  top: 50%;
+  transition-duration: 50ms;
+  transition-property: opacity;
+  transition-timing-function: ease-in-out;
+  width: var(--size);
   z-index: 10;
 
-  @media (--md) {
-    --minDeviation: 0;
-    --maxDeviation: 10;
-
-    --smallImage: 290px;
-    --mediumImage: 320px;
-    --largeImage: 360px;
+  img {
+    object-fit: cover;
+    user-select: none;
   }
 
-  @media (--lg) {
-    --minDeviation: 10;
-    --maxDeviation: 20;
-
-    --smallImage: 360px;
-    --mediumImage: 400px;
-    --largeImage: 440px;
-  }
-
-  @media (--xl) {
-    --minDeviation: 10;
-    --maxDeviation: 40;
-
-    --smallImage: 440px;
-    --mediumImage: 480px;
-    --largeImage: 540px;
-  }
-
-  /* Sizes */
-
-  &:nth-of-type(4n + 1) {
-    height: var(--mediumImage);
-    width: var(--mediumImage);
-  }
-
-  &:nth-of-type(4n + 2),
-  &:nth-of-type(4n + 3) {
-    height: var(--largeImage);
-    width: var(--largeImage);
-  }
-
-  &:nth-of-type(4n + 4) {
-    height: var(--smallImage);
-    width: var(--smallImage);
-  }
-
-  /* Positions */
-
-  &:nth-of-type(6n + 1) {
-    bottom: 0;
-    right: 0;
-  }
-
-  &:nth-of-type(6n + 2) {
-    left: 0;
-    top: 0;
-  }
-
-  &:nth-of-type(6n + 3) {
-    right: 0;
-    top: 0;
-  }
-
-  &:nth-of-type(6n + 4) {
-    bottom: 0;
-    left: 0;
-  }
-
-  &:nth-of-type(6n + 5) {
-    right: 0;
-    top: calc(50% - calc(var(--mediumImage) / 2));
-  }
-
-  &:nth-of-type(6n + 6) {
-    left: 0;
-    top: calc(50% - calc(var(--mediumImage) / 2));
+  &:active {
+    cursor: grabbing;
   }
 
   &::after {
@@ -111,17 +43,30 @@
     width: 100%;
   }
 
-  &:active {
-    cursor: grabbing;
+  &.is-visible {
+    opacity: 1;
+    pointer-events: auto;
   }
 
-  img {
-    display: block;
-    height: 100%;
-    margin-bottom: 0;
-    object-fit: cover;
-    user-select: none;
-    width: 100%;
+  &:nth-of-type(4n + 1) {
+    --size: 440px;
+
+    margin-left: calc(var(--size) * -1);
+    margin-top: calc(var(--size) * -1);
+  }
+
+  &:nth-of-type(4n + 2) {
+    margin-left: var(--size) * -1;
+  }
+
+  &:nth-of-type(4n + 3) {
+    --size: 360px;
+
+    margin-top: calc(var(--size) * -1);
+  }
+
+  &:nth-of-type(4n + 4) {
+    margin-left: calc(var(--size) * -1);
   }
 }
 
@@ -168,7 +113,7 @@
     position: absolute;
     top: -0.5px;
     transition-duration: 150ms;
-    transition-property: opacity, scale, border-color;
+    transition-property: opacity;
     transition-timing-function: ease-in-out;
     width: var(--handleSize);
     will-change: opacity, scale, border-color;
@@ -202,7 +147,6 @@
   height: var(--handleSize);
   margin-top: calc(var(--trackHeight) / 2);
   transform: translateY(-50%);
-  transition: transform var(--transitionFast);
   width: var(--handleSize);
 }
 
@@ -223,12 +167,7 @@
   border-radius: 50%;
   height: var(--handleSize);
   margin-top: 1rem calc(var(--trackHeight) / 2);
-  transition: transform var(--transitionFast);
   width: var(--handleSize);
-
-  &:active {
-    transform: scale(0.95);
-  }
 }
 
 /* Microsoft */
