--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,33 @@
 ---
+import { getImage } from 'astro:assets';
 import { getCollection } from 'astro:content';
 import { ChaosGallery, Grid, GridItem, Header, SocialLinks, TimelineItem } from 'src/components';
 import PostImage from 'src/components/PostImage.astro';
 import PostVideo from 'src/components/PostVideo.astro';
 import Preloader from 'src/components/Preloader.astro';
+import instagramPosts from 'src/content/social/instagram/posts.json';
 import Layout from 'src/layouts/Layout.astro';
 import { filterEntriesByStatus, mapEntryEssentials, sortEntriesByDate } from 'src/utils';
+
+const instaImages = import.meta.glob('src/content/social/instagram/*.{png,jpg,jpeg}');
+
+const images = [];
+
+for (const post of instagramPosts) {
+  const fullSrc = Object.keys(instaImages).find((key) => key.includes(post.id));
+
+  if (!fullSrc) continue;
+
+  const imageSrcModule = (await instaImages[fullSrc]()) as { default: string };
+  const astroImage = await getImage({ src: imageSrcModule.default, inferSize: true });
+
+  const image = {
+    astroImage,
+    post,
+  };
+
+  images.push(image);
+}
 
 const writing = await getCollection('writing');
 const projects = await getCollection('projects');
@@ -46,7 +68,7 @@ const description = `I've been building on the web for 15 years, helping compani
 
         <GridItem width={{ base: '50%', md: '50% - var(--spaceMedium)' }}>
           <h4>Photos</h4>
-          <ChaosGallery client:idle />
+          <ChaosGallery images={images} client:idle />
         </GridItem>
       </Grid>
     </section>
