Add aria-role to Preloader

--- a/src/components/Preloader.astro
+++ b/src/components/Preloader.astro
@@ -1,4 +1,4 @@
-<div class="Preloader-wrapper">
+<div class="Preloader-wrapper" role="status" aria-live="polite">
   <div id="js-preloader" class="Preloader"></div>
 </div>
 
