--- a/src/components/ImageCompare.css
+++ b/src/components/ImageCompare.css
@@ -1,7 +1,7 @@
 .Handle {
   --strokeWidth: 2px;
   --handleSize: 1rem;
-  --color: var(--colorBlack);
+  --color: black;
 
   background-color: var(--color);
   cursor: ew-resize;
