--- a/src/styles/code-blocks.css
+++ b/src/styles/code-blocks.css
@@ -19,7 +19,6 @@ pre[class*='astro-code'] {
 
 /* Code blocks */
 pre[class*='astro-code'] {
-  background-color: var(--codeBackgroundColor);
   color: var(--codeColor);
   margin-bottom: var(--spaceDefault);
   margin-left: calc(-1 * var(--gutter));
@@ -30,6 +29,10 @@ pre[class*='astro-code'] {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   padding-top: 1.25rem;
+
+  @media (prefers-color-scheme: dark) {
+    background-color: hsla(0, 0%, 6%) !important;
+  }
 }
 
 @media (--md) {
@@ -54,16 +57,9 @@ pre *::selection {
   font-size: inherit;
   font-size: 13.5px;
   letter-spacing: -0.01em;
-  line-height: 1rem;  
+  line-height: 1rem;
   padding: 1px 4px 2px 4px;
   white-space: normal;
-
-}
-
-@media (prefers-color-scheme: dark) {
-  :not(pre) > code[class*='astro-code'] {
-    background-color: var(--codeBackgroundColor);
-  }
 }
 
 /* Hide last span in code */
