Tweak post spacing , PostImage component, ChaosGallery timing

--- a/src/components/PostImage.astro
+++ b/src/components/PostImage.astro
@@ -23,7 +23,7 @@ if (!sizes || widths.length === 0) {
       widths = [400, 640, 720, 800, 900, 1024, 1280];
       break;
     case 'large':
-      sizes = '(max-width: 960px) 100vw, (min-width: 700px) 720px, (min-width: 1000px) 900px';
+      sizes = '(max-width: 960px) 100vw, (max-width: 999px) 720px, (min-width: 1000px) 900px';
       widths = [400, 640, 720, 800, 900, 1024, 1280, 1800, 1920];
       break;
     case 'full':
