--- a/src/components/SocialLinks.css
+++ b/src/components/SocialLinks.css
@@ -9,7 +9,7 @@
   flex-direction: column;
   font-size: 14px;
   margin-bottom: 0;
-  margin-top: -0.25rem; /* align w/ChaosGallery handle */
+  margin-top: -0.25rem; /* align w/MessyGallery handle */
   position: relative;
 }
 
