--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,13 @@ for (const post of instagramPosts) {
   if (!fullSrc) continue;
 
   const imageSrcModule = (await instaImages[fullSrc]()) as { default: string };
-  const astroImage = await getImage({ src: imageSrcModule.default, inferSize: true });
+  const astroImage = await getImage({
+    src: imageSrcModule.default,
+    inferSize: true,
+    widths: [400, 480, 540, 800, 960, 1080],
+    sizes: '(max-width: 999px) 400px, (max-width: 1439px) 480px, (min-with: 1440px) 540px',
+    quality: 80,
+  });
 
   const image = {
     astroImage,
@@ -82,12 +88,14 @@ const description = `I've been building on the web for 15 years, helping compani
         {
           sortedEntries.map((entry, index) => {
             const { video, image, description } = entry.data;
+            const src = `${entry.collection}/${entry.slug}/${image?.replace('./', '')}`;
+
             return (
               <TimelineItem entry={entry}>
                 {video && <PostVideo src={video} size="default" />}
                 {image && !video && (
                   <PostImage
-                    src={image}
+                    src={src}
                     size="default"
                     alt={description}
                     loading={index === 0 ? 'eager' : 'lazy'}
