--- a/src/components/MobileNav.css
+++ b/src/components/MobileNav.css
@@ -66,15 +66,17 @@
 }
 
 .MobileNavWrapper {
-  height: calc(100% - 5rem);
+  --offset: 5rem;
+
+  height: calc(100% - var(--offset));
   left: 0;
   opacity: 0;
   -webkit-overflow-scrolling: touch;
   overflow-y: scroll;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
   position: absolute;
-  top: 5rem;
+  top: var(--offset);
   transition: opacity var(--transitionDefault);
   width: 100%;
   z-index: 1;
@@ -84,6 +86,16 @@
     margin-bottom: 1.75rem;
     margin-top: 1rem;
     position: relative;
+  }
+
+  &::after {
+    background-image: linear-gradient(to bottom, var(--backgroundColor), transparent);
+    content: '';
+    height: 1.5rem;
+    left: 0;
+    position: fixed;
+    top: var(--offset);
+    width: 100%;
   }
 }
 
