Update homepage copy, add sup style

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -52,19 +52,22 @@ const description = `I've been building on the web for 15 years, helping compani
   <main>
     <section>
       <p>
-        I've been building on the web for 15 years, helping companies like Apple, Google, Twitter,
-        and the American Music Awards create beautiful and useful experiences for their users.
+        I've been building on the web for 15 years, designing and developing experiences for Apple,
+        Google, Twitter, the American Music Awards, and more along the way.
       </p>
 
       <p>
-        I specialize in a mix of visual/interaction design and front-end engineering — which allows
-        me to translate ideas into functional prototypes and production-ready code with the full
-        fidelity of the web.
+        Having worked in both design and engineering organizations, I have a wide breadth of
+        experience and a deep specialization at their intersection—Design Engineering.
       </p>
 
       <p>
         Here you'll find a medley of writing and side projects that explore software, design,
-        architecture, and the internet of things.
+        architecture, and the internet of things. Offline, I collect twentieth-century furniture and
+        objects, and co-own a tiny French-inspired bakery called <a
+          href="https://reverieglutenfree.com/"
+          target="_blank">Rêverie</a
+        >.
       </p>
     </section>
 
@@ -83,7 +86,7 @@ const description = `I've been building on the web for 15 years, helping compani
     </section>
 
     <section class="Entries">
-      <h4>Side Projects</h4>
+      <h4>Writing &amp; Side Projects</h4>
       <div>
         {
           sortedEntries.map((entry, index) => {
