--- a/src/components/SocialLinks.css
+++ b/src/components/SocialLinks.css
@@ -8,7 +8,8 @@
   display: flex;
   flex-direction: column;
   font-size: 14px;
-  margin-bottom: 0;
+  list-style-type: none;
+  margin: 0;
   margin-top: -0.25rem; /* align w/MessyGallery handle */
   position: relative;
 }
